--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -67,6 +67,7 @@
                      </AnchorPane>
                   </content>
                </CustomMenuItem>
+               <CheckMenuItem fx:id="audioStabilityCheckMenuItem" mnemonicParsing="false" text="High Audio Stability" />
             </items>
          </Menu>
          <Menu mnemonicParsing="false" text="MIDI">
