--- a/src/main/resources/fxml/effects.fxml
+++ b/src/main/resources/fxml/effects.fxml
@@ -1,52 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Slider?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.SVGPath?>
+<?import javafx.scene.layout.VBox?>
+<?import sh.ball.gui.components.EffectComponentGroup?>
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="355.0" prefWidth="606.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.EffectsController">
     <children>
-        <CheckBox fx:id="vectorCancellingCheckBox" layoutX="7.0" layoutY="15.0" mnemonicParsing="false" text="Vector cancel" />
-        <Slider fx:id="vectorCancellingSlider" blockIncrement="0.005" disable="true" layoutX="124.0" layoutY="16.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.11111111" />
-        <CheckBox fx:id="bitCrushCheckBox" layoutX="7.0" layoutY="55.0" mnemonicParsing="false" text="Bit crush" />
-        <Slider fx:id="bitCrushSlider" blockIncrement="0.005" disable="true" layoutX="124.0" layoutY="57.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.6666666" />
-        <CheckBox fx:id="verticalDistortCheckBox" layoutX="7.0" layoutY="96.0" mnemonicParsing="false" text="Vertical shift" />
-        <Slider fx:id="verticalDistortSlider" blockIncrement="0.005" disable="true" layoutX="124.0" layoutY="98.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.2" />
-        <CheckBox fx:id="horizontalDistortCheckBox" layoutX="7.0" layoutY="138.0" mnemonicParsing="false" text="Horizontal shift" />
-        <Slider fx:id="horizontalDistortSlider" blockIncrement="0.005" disable="true" layoutX="124.0" layoutY="140.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.2" />
-        <CheckBox fx:id="wobbleCheckBox" layoutX="7.0" layoutY="180.0" mnemonicParsing="false" text="Wobble" />
-        <Slider fx:id="wobbleSlider" blockIncrement="0.005" disable="true" layoutX="124.0" layoutY="182.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.2" />
-        <SVGPath fx:id="vectorCancellingMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="414.0" layoutY="13.0" pickOnBounds="true" />
-        <SVGPath fx:id="bitCrushMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="414.0" layoutY="54.0" pickOnBounds="true" />
-        <SVGPath fx:id="verticalDistortMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="414.0" layoutY="94.0" pickOnBounds="true" />
-        <SVGPath fx:id="horizontalDistortMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="414.0" layoutY="136.0" pickOnBounds="true" />
-        <SVGPath fx:id="wobbleMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="414.0" layoutY="178.0" pickOnBounds="true" />
-        <CheckBox fx:id="smoothingCheckBox" layoutX="7.0" layoutY="220.0" mnemonicParsing="false" text="Smoothing" />
-        <Slider fx:id="smoothingSlider" blockIncrement="0.005" disable="true" layoutX="124.0" layoutY="222.0" majorTickUnit="0.1" max="1.0" minorTickCount="1" prefHeight="38.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.125" />
-        <SVGPath fx:id="smoothingMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="414.0" layoutY="218.0" pickOnBounds="true" />
-        <CheckBox fx:id="traceMaxCheckBox" layoutX="8.0" layoutY="300.0" mnemonicParsing="false" text="Trace max" />
-        <Slider fx:id="traceMaxSlider" blockIncrement="0.005" disable="true" layoutX="125.0" layoutY="302.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.5" />
-        <SVGPath fx:id="traceMaxMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="415.0" layoutY="298.0" pickOnBounds="true" />
-      <ComboBox fx:id="wobbleComboBox" layoutX="445.0" layoutY="175.0" prefHeight="26.0" prefWidth="102.0" />
-      <ComboBox fx:id="traceMaxComboBox" layoutX="446.0" layoutY="295.0" prefHeight="26.0" prefWidth="102.0" />
-      <ComboBox fx:id="smoothingComboBox" layoutX="445.0" layoutY="215.0" prefHeight="26.0" prefWidth="102.0" />
-      <ComboBox fx:id="horizontalDistortComboBox" layoutX="445.0" layoutY="133.0" prefHeight="26.0" prefWidth="102.0" />
-      <ComboBox fx:id="verticalDistortComboBox" layoutX="445.0" layoutY="91.0" prefHeight="26.0" prefWidth="102.0" />
-      <ComboBox fx:id="bitCrushComboBox" layoutX="445.0" layoutY="53.0" prefHeight="26.0" prefWidth="102.0" />
-      <ComboBox fx:id="vectorCancellingComboBox" layoutX="445.0" layoutY="12.0" prefHeight="26.0" prefWidth="102.0" />
-      <CheckBox fx:id="vectorCancellingMic" layoutX="558.0" layoutY="16.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="bitCrushMic" layoutX="558.0" layoutY="57.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="verticalDistortMic" layoutX="558.0" layoutY="95.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="horizontalDistortMic" layoutX="558.0" layoutY="137.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="wobbleMic" layoutX="558.0" layoutY="179.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="smoothingMic" layoutX="558.0" layoutY="219.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="traceMaxMic" layoutX="559.0" layoutY="299.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="traceMinCheckBox" layoutX="8.0" layoutY="260.0" mnemonicParsing="false" text="Trace min" />
-      <Slider fx:id="traceMinSlider" blockIncrement="0.005" disable="true" layoutX="125.0" layoutY="262.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="230.0" showTickLabels="true" showTickMarks="true" value="0.5" />
-      <SVGPath fx:id="traceMinMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="415.0" layoutY="258.0" pickOnBounds="true" />
-      <ComboBox fx:id="traceMinComboBox" layoutX="446.0" layoutY="255.0" prefHeight="26.0" prefWidth="102.0" />
-      <CheckBox fx:id="traceMinMic" layoutX="559.0" layoutY="259.0" mnemonicParsing="false" text="Mic" />
+      <VBox>
+         <children>
+              <EffectComponentGroup fx:id="vectorCancelling" label="vectorCancelling" max="1.0" min="0.0" name="Vector cancel" type="VECTOR_CANCELLING" value="0.11111111" />
+              <EffectComponentGroup fx:id="bitCrush" label="bitCrush" max="1.0" min="0.0" name="Bit crush" type="BIT_CRUSH" value="0.6666666" />
+              <EffectComponentGroup fx:id="verticalDistort" label="verticalDistort" max="1.0" min="0.0" name="Vertical shift" type="VERTICAL_DISTORT" value="0.2" />
+              <EffectComponentGroup fx:id="horizontalDistort" label="horizontalDistort" max="1.0" min="0.0" name="Horizontal shift" type="HORIZONTAL_DISTORT" value="0.2" />
+              <EffectComponentGroup fx:id="wobble" label="wobble" max="1.0" min="0.0" name="Wobble" type="WOBBLE" value="0.2" />
+              <EffectComponentGroup fx:id="smoothing" label="smoothing" max="1.0" min="0.0" name="Smoothing" type="SMOOTH" value="0.125" />
+              <EffectComponentGroup fx:id="traceMax" label="traceMax" max="1.0" min="0.0" name="Trace max" type="TRACE_MAX" value="0.5" />
+              <EffectComponentGroup fx:id="traceMin" label="traceMin" max="1.0" min="0.0" name="Trace min" type="TRACE_MIN" value="0.5" />
+         </children>
+         <padding>
+            <Insets top="5.0" />
+         </padding>
+      </VBox>
     </children>
 </AnchorPane>
