--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -98,6 +98,26 @@
                      </AnchorPane>
                   </content>
                </CustomMenuItem>
+               <CustomMenuItem hideOnClick="false" mnemonicParsing="false" text="Note Attack (sec)">
+                  <content>
+                     <AnchorPane>
+                        <children>
+                           <Label prefHeight="25.0" text="Note Attack (sec)" textFill="WHITE" />
+                           <Spinner fx:id="attackSpinner" editable="true" layoutY="25.0" />
+                        </children>
+                     </AnchorPane>
+                  </content>
+               </CustomMenuItem>
+               <CustomMenuItem hideOnClick="false" mnemonicParsing="false" text="Note Decay (sec)">
+                  <content>
+                     <AnchorPane>
+                        <children>
+                           <Label prefHeight="25.0" text="Note Decay (sec)" textFill="WHITE" />
+                           <Spinner fx:id="decaySpinner" editable="true" layoutY="25.0" />
+                        </children>
+                     </AnchorPane>
+                  </content>
+               </CustomMenuItem>
            </items>
          </Menu>
          <Menu mnemonicParsing="false" text="View">
