Support mono output and >2 audio outputs with controllable brightness values

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -103,6 +103,11 @@
     -fx-padding: 0.2em;
 }
 
+.slider .axis .axis-tick-mark, .slider .axis .axis-minor-tick-mark {
+    -fx-fill: null;
+    -fx-stroke: white;
+}
+
 .check-box > .box {
     -fx-background-radius: 0;
     -fx-background-color: very_dark;
