--- a/src/main/resources/fxml/general.fxml
+++ b/src/main/resources/fxml/general.fxml
@@ -22,7 +22,7 @@
       <Slider fx:id="micVolumeSlider" blockIncrement="1.0" layoutX="82.0" layoutY="237.0" majorTickUnit="1.0" max="10.0" prefHeight="42.0" prefWidth="246.0" showTickLabels="true" showTickMarks="true" value="1.0" />
       <SVGPath fx:id="micVolumeMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="333.0" layoutY="233.0" pickOnBounds="true" />
       <Label layoutX="13.0" layoutY="236.0" text="Mic Volume" />
-      <Button fx:id="deleteFileButton" layoutX="14.0" layoutY="84.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Remove File" />
+      <Button fx:id="deleteFileButton" layoutX="14.0" layoutY="84.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Close File" />
       <Button fx:id="createFileButton" layoutX="248.0" layoutY="286.0" minHeight="30.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="95.0" text="Create File" />
       <ComboBox fx:id="createFileComboBox" layoutX="166.0" layoutY="286.0" minHeight="30.0" prefHeight="30.0" prefWidth="78.0" />
       <TextField fx:id="createFileTextField" alignment="CENTER_RIGHT" layoutX="35.0" layoutY="286.0" prefHeight="30.0" prefWidth="127.0" />
